fixes overflow problem

--- a/src/components/quote.css
+++ b/src/components/quote.css
@@ -20,7 +20,8 @@
 
 .quote__container--shrink {
     height: 99px;
-    transition: height 0.25s ease-in-out;
+    margin: 0;
+    transition: all 0.25s ease-in-out;
 
     @media (--minTabletWidth) {
         height: 153px;
