--- a/src/components/stats.css
+++ b/src/components/stats.css
@@ -34,24 +34,8 @@
     transition: height 0.25s ease-in-out;
 }
 
-
-.stats--hidden {
-    visibility: collapse;
-    opacity: 0;
-    transition: opacity 0.3s ease-in;
-}
-
-.stats--visible {
-    visibility: visible;
-    opacity: 1;
-    transition: opacity 0.3s ease-in;
-}
-
 .stats {
     width: 323px;
-    display: flex;
-    flex-direction: column;
-    gap: 16px;
     margin: 48px auto auto auto;
 
     @media (--minTabletWidth) {
@@ -64,6 +48,20 @@
     @media (--minDesktopWidth) {
         width: 844px;
     }
+}
+
+.stats--hidden {
+    display: none;
+    opacity: 0;
+    transition: opacity 0.3s ease-in;
+}
+
+.stats--visible {
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
+    opacity: 1;
+    transition: opacity 0.3s ease-in;
 }
 
 .stats__itemGroupWrapper {
